Add a requirements.txt file and comment .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.pyc
 build/
+
+# If you build the documentation in the source tree, you will create a
+# lot of files that we don't want to see with "git status":
 *.png
 *.gif
 *.pov
@@ -11,4 +14,9 @@ build/
 *.xyz
 *.db
 *.pckl
+
+# These are OK (images for the supported calculators):
 !/doc/static/*.png
+
+# This one is also OK:
+!requirements.txt
