--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,6 @@ master:
     - apt-get install -qy python-numpy
     - pwd
     - echo $HOME
-    - echo $USER
+    - echo $PWD
     - echo $PYTHONPATH
-    - PATH=$PATH:/builds/$USER/ase/tools PYTHONPATH=$PYTHONPATH:/builds/ase/ase python setup.py test
+    - PATH=$PATH:$PWD/tools PYTHONPATH=$PYTHONPATH:/builds/ase/ase python setup.py test
