--- a/doc/Makefile
+++ b/doc/Makefile
@@ -41,6 +41,7 @@ latex:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+	python -m ase.utils.sphinx clean
 
 linkcheck:
 	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) $(BUILDDIR)/linkcheck
